objects/ALTF__Insight_Section__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Altify Insight Sections</relationshipLabel>
        <relationshipName>Altify_Topics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Division__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Division</label>
        <referenceTo>ALTF__Account_Division__c</referenceTo>
        <relationshipLabel>Section Division</relationshipLabel>
        <relationshipName>Section_Divisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Opportunity__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Altify Topics</relationshipLabel>
        <relationshipName>Altify_Topics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Short_Description__c</fullName>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__X_Coordinate__c</fullName>
        <label>X Coordinate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Altify Insight Section</label>
    <nameField>
        <label>Altify Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Insight Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>